Dropdown fixed on mobile devices, basic view of registration

--- a/src/app/styles/styles.css
+++ b/src/app/styles/styles.css
@@ -214,6 +214,7 @@ input[type="color"]:focus,
 	letter-spacing: 3px;
 	color: #ffffff;
 	min-height: 50px;
+	max-width: 104%;
 	padding: 0 0 0 20px;
 }
 
